Refactor - make specifying verbose GC flag less prone to coding errors